--- a/res/values-bn-rBD/strings.xml
+++ b/res/values-bn-rBD/strings.xml
@@ -22,9 +22,9 @@
     <string name="details_hms" msgid="4842276230698703554">"%1$d:%2$02d:%3$02d"</string>
     <string name="set_image" msgid="3969690281401045698">"এই হিসাবে ছবি সেট করুন"</string>
     <string name="delete" msgid="2714492172818940424">"মুছুন"</string>
-    <string name="share" msgid="8581089487762243115">"ভাগ করুন"</string>
-    <string name="share_panorama" msgid="3558466186935359444">"প্যানোরামা ভাগ করুন"</string>
-    <string name="share_as_photo" msgid="4831213580709167218">"ফটো হিসাবে ভাগ করুন"</string>
+    <string name="share" msgid="8581089487762243115">"শেয়ার করুন"</string>
+    <string name="share_panorama" msgid="3558466186935359444">"প্যানোরামা শেয়ার করুন"</string>
+    <string name="share_as_photo" msgid="4831213580709167218">"ফটো হিসাবে শেয়ার করুন"</string>
     <string name="deleted" msgid="2036165115527228127">"মোছা হয়েছে"</string>
     <string name="undo" msgid="5110048345890050107">"পূর্বাবস্থায় ফিরুন"</string>
     <string name="details" msgid="4404020741542549488">"বিশদ বিবরণ"</string>
@@ -68,6 +68,7 @@
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"ক্যামেরা সাথে সংযোগ করতে পারবেন না।"</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"নিরাপত্তা নীতিগুলির জন্য ক্যামেরা অক্ষমিত করা হয়েছে।"</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"আপনার ফটো বা ভিডিও সংরক্ষণ করার সময় একটি ত্রুটি ঘটেছে৷"</string>
+    <string name="error_permissions" msgid="3454167403425651254">"অ্যাপ্লিকেশাটি চালানোর জন্য কোনো গুরুত্বপূর্ণ অনুমতির প্রয়োজন নেই৷ অনুগ্রহ করে আপনার অনুমতি সেটিংস পরীক্ষা করুন৷"</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"ফটো সঞ্চয় করতে ব্যর্থ হয়েছে৷"</string>
     <string name="wait" msgid="765601745709933047">"দয়া করে অপেক্ষা করুন..."</string>
     <string name="no_storage" product="default" msgid="5922012950780548098">"ক্যামেরা ব্যবহার করার পূর্বে একটি SD কার্ড ঢোকান।"</string>
@@ -287,8 +288,8 @@
     <string name="set_duration" msgid="1638453882581604341">"সময়কাল সেকেন্ডে সেট করুন"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"একটি ফটো তুলতে কাউন্ট ডাউন হচ্ছে"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"ফটোর অবস্থান মনে রাখবেন?"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"ফটো ও ভিডিওগুলি যেখানে তোলা হয়েছে সেই অবস্থানের সঙ্গে সেগুলি ট্যাগ করুন।\n\nঅন্য অ্যাপ্লিকেশানগুলি আপনার সংরক্ষিত চিত্রগুলির সহ এই তথ্য অ্যাক্সেস করতে পারবে।"</string>
-    <string name="remember_location_no" msgid="4412802756840226925">"না ধন্যবাদ"</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"আপনার ফটো ও ভিডিওগুলির তোলার অবস্থান সহ সেগুলিকে ট্যাগ করুন৷"</string>
+    <string name="remember_location_no" msgid="4412802756840226925">"না থাক"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"হ্যাঁ"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"আরো বিকল্প"</string>
     <string name="camera_menu_settings_label" msgid="3862756725328016822">"সেটিংস"</string>
@@ -340,7 +341,7 @@
     <string name="done_button_description" msgid="1334963435441544592">"সম্পন্ন"</string>
     <string name="retake_button_description" msgid="4234613030674787714">"পুনরায় নিন"</string>
     <string name="review_button_description" msgid="7932122063748430080">"পর্যালোচনা"</string>
-    <string name="share_button_description" msgid="5108508790540832053">"ভাগ করুন"</string>
+    <string name="share_button_description" msgid="5108508790540832053">"শেয়ার করুন"</string>
     <string name="view_button_description" msgid="4985768837891362075">"দেখুন"</string>
     <string name="edit_button_description" msgid="98550816724901925">"সম্পাদনা করুন"</string>
     <string name="delete_button_description" msgid="2251065309677200911">"মুছুন"</string>
@@ -352,10 +353,10 @@
     <string name="exposure_compensation_desc_p2" msgid="4555277824096107142">"এক্সপোজার ঘাটতিপূরণ: +২"</string>
     <string name="button_change_announcement" msgid="3759686152778772111">"এখন বোতাম হল %s"</string>
     <string name="setting_location" msgid="4459859689227893838">"অবস্থান"</string>
-    <string name="setting_back_camera_photo" msgid="256738900473265017">"ডিভাইসের পিছনের ক্যামেরার ফটোর"</string>
-    <string name="setting_back_camera_video" msgid="5220819479408164689">"ডিভাইসের পিছনের ক্যামেরার ভিডিওর"</string>
-    <string name="setting_front_camera_photo" msgid="4131886734622868637">"সামনের ক্যামেরার ফটোর"</string>
-    <string name="setting_front_camera_video" msgid="2178799452805359752">"সামনের ক্যামেরার ভিডিওর"</string>
+    <string name="setting_back_camera_photo" msgid="256738900473265017">"ডিভাইসের পিছনের ক্যামেরার ফটো"</string>
+    <string name="setting_back_camera_video" msgid="5220819479408164689">"ডিভাইসের পিছনের ক্যামেরার ভিডিও"</string>
+    <string name="setting_front_camera_photo" msgid="4131886734622868637">"সামনের ক্যামেরার ফটো"</string>
+    <string name="setting_front_camera_video" msgid="2178799452805359752">"সামনের ক্যামেরার ভিডিও"</string>
     <string name="setting_default_camera" msgid="6954076799301004779">"ডিফল্ট ক্যামেরা"</string>
     <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"সহায়তা এবং প্রতিক্রিয়া"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"HDR+ প্রক্রিয়াকরণ করা হচ্ছে…"</string>
@@ -381,7 +382,7 @@
     <string name="settings_cling_text" msgid="5368054627268181292">"সেটিংস-এ, রেজোলিউশন এবং গুণমান পরিবর্তন করুন, বা উন্নত বৈশিষ্ট্যগুলি ব্যবহার করে দেখুন৷"</string>
     <string name="photo_size_selection_title" msgid="2789753590719172645">"ফটোর আকার চয়ন করুন"</string>
     <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"আপনি এই সেটিংসটি পরে পরিবর্তন করতে পারেন৷"</string>
-    <string name="share_to" msgid="5144911209144798122">"এর সাথে ভাগ করুন"</string>
+    <string name="share_to" msgid="5144911209144798122">"এর সাথে শেয়ার করুন"</string>
     <string name="edit_with" msgid="615569327230783971">"এর মাধ্যমে সম্পাদনা করুন"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"পরবর্তী"</string>
     <string name="confirm_button_text" msgid="7389949384482206814">"ঠিক আছে, বুঝেছি"</string>
