--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -67,10 +67,11 @@
     <string name="camera_error_title" msgid="6200558085072670067">"Kamerafehler"</string>
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Keine Verbindung zur Kamera möglich"</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"Die Kamera wurde aufgrund von Sicherheitsrichtlinien deaktiviert."</string>
-    <string name="error_media_storage_failure" msgid="7711687330673245629">"Beim Speichern Ihres Fotos oder Videos ist ein Problem aufgetreten."</string>
+    <string name="error_media_storage_failure" msgid="7711687330673245629">"Beim Speichern deines Fotos oder Videos ist ein Problem aufgetreten."</string>
+    <string name="error_permissions" msgid="3454167403425651254">"Dieser App fehlen wichtige Berechtigungen, ohne die sie nicht ausgeführt werden kann. Bitte überprüfe deine Einstellungen für Berechtigungen."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"Fehler beim Speichern des Fotos"</string>
     <string name="wait" msgid="765601745709933047">"Bitte warten…"</string>
-    <string name="no_storage" product="default" msgid="5922012950780548098">"Legen Sie vor Verwendung der Kamera eine SD-Karte ein."</string>
+    <string name="no_storage" product="default" msgid="5922012950780548098">"Lege vor Verwendung der Kamera eine SD-Karte ein."</string>
     <string name="preparing_sd" product="default" msgid="7435693655017362767">"SD-Karte wird vorbereitet…"</string>
     <string name="access_sd_fail" product="default" msgid="2634861611082499811">"Kein Zugriff auf SD-Karte möglich"</string>
     <string name="time_lapse_title" msgid="3267978566401228497">"Zeitrafferaufnahme"</string>
@@ -159,7 +160,7 @@
     <string name="dialog_cancel" msgid="692365061128351656">"Abbrechen"</string>
     <string name="dialog_report" msgid="7616428760369876209">"Feedback"</string>
     <string name="dialog_dismiss" msgid="1382550604990470119">"Schließen"</string>
-    <string name="spaceIsLow_content" product="default" msgid="4522771065344332702">"Auf Ihrer SD-Karte ist nicht mehr genügend Speicherplatz vorhanden. Ändern Sie die Qualitätseinstellung oder löschen Sie Bilder oder andere Dateien."</string>
+    <string name="spaceIsLow_content" product="default" msgid="4522771065344332702">"Auf deiner SD-Karte ist nicht mehr genügend Speicherplatz vorhanden. Ändere die Qualitätseinstellung oder lösche Bilder oder andere Dateien."</string>
     <string name="video_reach_size_limit" msgid="9196836111505731836">"Maximale Größe erreicht"</string>
     <string name="pano_too_fast_prompt" msgid="2503148095578052177">"Zu schnell"</string>
     <string name="pano_dialog_prepare_preview" msgid="4445235163599534263">"Panorama wird vorbereitet"</string>
@@ -190,7 +191,7 @@
     <string name="accessibility_shutter_button" msgid="6040483605347230438">"Blende"</string>
     <string name="accessibility_cancel_button" msgid="5679989494636116448">"Abbrechen"</string>
     <string name="accessibility_menu_button" msgid="7692103503958544723">"Menüschaltfläche"</string>
-    <string name="accessibility_check_box" msgid="1084094675439953723">"Kontrollkästchen für %1$s"</string>
+    <string name="accessibility_check_box" msgid="1084094675439953723">"Kästchen für %1$s"</string>
     <string name="accessibility_switch_to_camera" msgid="4518394037216725274">"Zu Kamera wechseln"</string>
     <string name="accessibility_switch_to_video" msgid="8174781871592793967">"Zu Video wechseln"</string>
     <string name="accessibility_switch_to_panorama" msgid="8322228859117808037">"Zu Panorama wechseln"</string>
@@ -271,11 +272,11 @@
     <string name="time_lapse_hours" msgid="5294001144133261436">"Stunden"</string>
     <string name="time_lapse_interval_set" msgid="2418594453248958440">"Fertig"</string>
     <string name="set_time_interval" msgid="2531393962847535331">"Zeitintervall festlegen"</string>
-    <string name="set_time_interval_help" msgid="64145154088021389">"Die Zeitraffer-Funktion ist deaktiviert. Aktivieren Sie sie, um das Zeitintervall festzulegen."</string>
+    <string name="set_time_interval_help" msgid="64145154088021389">"Die Zeitraffer-Funktion ist deaktiviert. Aktiviere sie, um das Zeitintervall festzulegen."</string>
     <string name="set_duration" msgid="1638453882581604341">"Dauer in Sekunden festlegen"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"Countdown für Fotoaufnahme"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Aufnahmeort für Fotos speichern?"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"Taggen Sie Ihre Fotos und Videos mit den Standorten, an denen sie aufgenommen wurden.\n\nAndere Apps können auf diese Informationen und Ihre gespeicherten Bilder zugreifen."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"Tagge deine Fotos und Videos mit den Standorten, an denen sie aufgenommen wurden."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"Nein danke"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Ja"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"Weitere Optionen"</string>
@@ -340,8 +341,8 @@
     <string name="exposure_compensation_desc_p2" msgid="4555277824096107142">"Belichtungskorrektur +2"</string>
     <string name="button_change_announcement" msgid="3759686152778772111">"Schaltfläche ist jetzt %s."</string>
     <string name="setting_location" msgid="4459859689227893838">"Standort"</string>
-    <string name="setting_back_camera_photo" msgid="256738900473265017">"Rückkamera – Foto"</string>
-    <string name="setting_back_camera_video" msgid="5220819479408164689">"Rückkamera – Video"</string>
+    <string name="setting_back_camera_photo" msgid="256738900473265017">"Rückseitenkamera – Foto"</string>
+    <string name="setting_back_camera_video" msgid="5220819479408164689">"Rückseitenkamera – Video"</string>
     <string name="setting_front_camera_photo" msgid="4131886734622868637">"Frontkamera – Foto"</string>
     <string name="setting_front_camera_video" msgid="2178799452805359752">"Frontkamera – Video"</string>
     <string name="setting_default_camera" msgid="6954076799301004779">"Standardkamera"</string>
@@ -366,10 +367,10 @@
     <string name="cling_text_for_refocus_editor_button" msgid="4785017397116829802">"Zum Neufokussieren hier tippen"</string>
     <string name="pref_category_advanced" msgid="5921085080077574872">"Erweitert"</string>
     <string name="pref_camera_exposure_compensation" msgid="4143245817259719147">"Manuelle Belichtung"</string>
-    <string name="settings_cling_text" msgid="5368054627268181292">"In den Einstellungen können Sie die Auflösung und die Qualität ändern oder erweiterte Funktionen ausprobieren."</string>
+    <string name="settings_cling_text" msgid="5368054627268181292">"In den Einstellungen kannst du die Auflösung und die Qualität ändern oder erweiterte Funktionen ausprobieren."</string>
     <string name="photo_size_selection_title" msgid="2789753590719172645">"Fotogröße auswählen"</string>
-    <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"Sie können dies später in den Einstellungen ändern."</string>
-    <string name="share_to" msgid="5144911209144798122">"Teilen auf"</string>
+    <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"Du kannst dies später in den Einstellungen ändern."</string>
+    <string name="share_to" msgid="5144911209144798122">"Teilen über"</string>
     <string name="edit_with" msgid="615569327230783971">"Bearbeiten mit"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"Weiter"</string>
     <string name="confirm_button_text" msgid="7389949384482206814">"OK"</string>
