--- a/res/values-gl-rES/strings.xml
+++ b/res/values-gl-rES/strings.xml
@@ -68,6 +68,7 @@
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Non se pode conectar coa cámara."</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"A cámara desactivouse debido ás políticas de seguranza."</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"Produciuse un problema ao gardar a túa foto ou vídeo."</string>
+    <string name="error_permissions" msgid="3454167403425651254">"A aplicación non ten permisos esenciais que se necesitan para a súa execución. Comproba a configuración dos permisos."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"Produciuse un erro de almacenamento de fotos."</string>
     <string name="wait" msgid="765601745709933047">"Agarda..."</string>
     <string name="no_storage" product="default" msgid="5922012950780548098">"Insire unha tarxeta SD antes de usar a cámara."</string>
@@ -216,8 +217,8 @@
     <string name="media_processing_content_description" msgid="8138587719107183754">"Procesamento de ficheiro multimedia"</string>
     <string name="accessibility_mode_list_toggle" msgid="4784230103566918645">"Alternar lista de modos"</string>
     <string name="btn_mode_list_toggle" msgid="3986242443098400164">"Lista de modos"</string>
-    <string name="accessibility_filmstrip_toggle" msgid="6966978483643396442">"Alternar tira de vídeo"</string>
-    <string name="btn_filmstrip_toggle" msgid="3666693972882351490">"Tira de vídeo"</string>
+    <string name="accessibility_filmstrip_toggle" msgid="6966978483643396442">"Alternar tira de película"</string>
+    <string name="btn_filmstrip_toggle" msgid="3666693972882351490">"Tira de película"</string>
     <string name="accessibility_mode_zoom_plus" msgid="4967389173992713073">"Achegar"</string>
     <string name="btn_zoom_plus" msgid="4645138949375961656">"Z+"</string>
     <string name="accessibility_mode_zoom_minus" msgid="8850636036927992409">"Afastar"</string>
@@ -275,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"Establecer a duración en segundos"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"Contando cara atrás para tirar unha foto"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Queres que se lembren as localizacións das fotos?"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"Etiqueta as fotos e os vídeos coas localizacións en que se fixeron.\n\nOutras aplicacións poden acceder a esta información e ás imaxes gardadas."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"Etiqueta as túas fotos e vídeos coas localizacións en que se fixeron."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"Non, grazas"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Si"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"MÁIS OPCIÓNS"</string>
@@ -287,7 +288,7 @@
     <string name="photo_editor" msgid="1521994560971367225">"Editor de fotos"</string>
     <string name="crop_save" msgid="2841974981340098579">"Gardar"</string>
     <string name="cannot_load_image" msgid="4100136187076585580">"Non se pode cargar a imaxe"</string>
-    <string name="switch_photo_filmstrip" msgid="1448511001008888767">"Vista de película"</string>
+    <string name="switch_photo_filmstrip" msgid="1448511001008888767">"Vista de tira de película"</string>
     <string name="setting_wallpaper" msgid="2397759659347872725">"Establecendo fondo de pantalla"</string>
     <string name="mode_settings" msgid="2021937261522670921">"Configuración"</string>
     <string name="mode_camera" msgid="279763925715250603">"Cámara"</string>
