--- a/res/values-hy-rAM/strings.xml
+++ b/res/values-hy-rAM/strings.xml
@@ -68,6 +68,7 @@
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Հնարավոր չէ միանալ ֆոտոխցիկին:"</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"Ֆոտոխցիկն անջատված է՝ անվտանգության քաղաքականության նկատառումներից ելնելով:"</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"Ձեր լուսանկարը կամ տեսանյութը պահելիս առաջացել է խնդիր:"</string>
+    <string name="error_permissions" msgid="3454167403425651254">"Հավելվածը չունի գործարկման համար անհրաժեշտ թույլտվություններ: Ստուգեք թույլտվությունների կարգավորումները:"</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"Չհաջողվեց պահել լուսանկարը:"</string>
     <string name="wait" msgid="765601745709933047">"Խնդրում ենք սպասել..."</string>
     <string name="no_storage" product="default" msgid="5922012950780548098">"Տեսախցիկն օգտագործելուց առաջ տեղադրեք SD քարտ:"</string>
@@ -190,7 +191,7 @@
     <string name="accessibility_shutter_button" msgid="6040483605347230438">"Փական"</string>
     <string name="accessibility_cancel_button" msgid="5679989494636116448">"Չեղարկել"</string>
     <string name="accessibility_menu_button" msgid="7692103503958544723">"Ընտրացանկի կոճակ"</string>
-    <string name="accessibility_check_box" msgid="1084094675439953723">"%1$s նշման վանդակ"</string>
+    <string name="accessibility_check_box" msgid="1084094675439953723">"%1$s նշավանդակ"</string>
     <string name="accessibility_switch_to_camera" msgid="4518394037216725274">"Փոխարկել ֆոտոխցիկի ռեժիմի"</string>
     <string name="accessibility_switch_to_video" msgid="8174781871592793967">"Փոխարկել տեսախցիկի ռեժիմի"</string>
     <string name="accessibility_switch_to_panorama" msgid="8322228859117808037">"Փոխարկել համայնապատկերի ռեժիմի"</string>
@@ -275,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"Սահմանել տևողությունը վայրկյաններով"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"Լուսանկարման հետհաշվարկ"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Հիշե՞լ լուսանկարների վայրերը:"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"Լուսանկարներում և տեսանյութերում նշել, թե որտեղ են դրանք արվել:\n\nԱյլ ծրագրեր կարող են օգտվել այդ տեղեկատվությունից՝ ձեր պահած նկարների հետ մեկտեղ:"</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"Լուսանկարների և տեսանյութերի վրա նշել նկարահանման վայրը:"</string>
     <string name="remember_location_no" msgid="4412802756840226925">"Ոչ, շնորհակալություն"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Այո"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"ԱՅԼ ԸՆՏՐԱՆՔՆԵՐ"</string>
