--- a/res/values-ky-rKG/strings.xml
+++ b/res/values-ky-rKG/strings.xml
@@ -68,6 +68,7 @@
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Камерага туташа албай жатат."</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"Коопсуздук саясатынан улам камера токтотулду."</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"Сүрөтүңүз же видеоңузду сактоодо көйгөй чыкты."</string>
+    <string name="error_permissions" msgid="3454167403425651254">"Колдонмону иштетүү үчүн талап кылынган уруксаттар жок. Уруксат жөндөөлөрүңүздү текшерип көрүңүз."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"Сүрөт сактоо ишке ашкан жок."</string>
     <string name="wait" msgid="765601745709933047">"Күтө туруңуз…"</string>
     <string name="no_storage" product="default" msgid="5922012950780548098">"Камераны колдонуп баштаардан мурун SD-карта салыңыз."</string>
@@ -275,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"Узактыгын секунд менен орнотуу"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"Сүрөт тартаардын алдында санак жүргүзүү"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Сүрөттүн жайгашуусу эстелип калсынбы?"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"Сүрөттөрдүн жана видеолордун тартылган орундарын белгилеңиз.\n\nСиз киргизген бул маалыматтарды башка колдонмолор пайдалана алышат."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"Сүрөттөрүңүз менен видеолоруңуздун тартылган жери тууралуу маалымат кошосузбу?"</string>
     <string name="remember_location_no" msgid="4412802756840226925">"Алкыш, кереги жок"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Ооба"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"КӨБҮРӨӨК МҮМКҮНЧҮЛҮКТӨР"</string>
@@ -345,7 +346,7 @@
     <string name="setting_front_camera_photo" msgid="4131886734622868637">"Алдыңкы камера сүрөтү"</string>
     <string name="setting_front_camera_video" msgid="2178799452805359752">"Алдыңкы камера видеосу"</string>
     <string name="setting_default_camera" msgid="6954076799301004779">"Абалкы камера"</string>
-    <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"Жардам &amp; жооп пикир"</string>
+    <string name="setting_google_help_and_feedback" msgid="2079580537079242775">"Жардам жана жооп пикир"</string>
     <string name="processing_hdr_plus" msgid="9160093263037540304">"HDR+ иштетилүүдө …"</string>
     <string name="open_source_licenses" msgid="2169711954264883060">"Ачык программа уруксаттамалары"</string>
     <string name="pref_category_general" msgid="6737748849700581019">"Жалпы тууралоолор"</string>
