--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -68,6 +68,7 @@
     <string name="error_cannot_connect_camera" msgid="2713059773224193128">"Det går inte att ansluta till kameran."</string>
     <string name="error_camera_disabled" msgid="5582398275657419692">"Kameran har inaktiverats på grund av gällande säkerhetspolicyer."</string>
     <string name="error_media_storage_failure" msgid="7711687330673245629">"Det gick inte att spara fotot eller videon."</string>
+    <string name="error_permissions" msgid="3454167403425651254">"Det saknas behörigheter som är avgörande för att appen ska fungera. Kontrollera behörighetsinställningarna."</string>
     <string name="reason_storage_failure" msgid="6818898304774654969">"Fotolagringen misslyckades."</string>
     <string name="wait" msgid="765601745709933047">"Vänta …"</string>
     <string name="no_storage" product="default" msgid="5922012950780548098">"Sätt i ett SD-kort innan du använder kameran."</string>
@@ -157,8 +158,8 @@
     <string name="pref_camera_id_label_front" msgid="349308803062874842">"BAKRE KAMERA"</string>
     <string name="dialog_ok" msgid="774141340500181131">"OK"</string>
     <string name="dialog_cancel" msgid="692365061128351656">"Avbryt"</string>
-    <string name="dialog_report" msgid="7616428760369876209">"Rapport"</string>
-    <string name="dialog_dismiss" msgid="1382550604990470119">"Avvisa"</string>
+    <string name="dialog_report" msgid="7616428760369876209">"Rapportera"</string>
+    <string name="dialog_dismiss" msgid="1382550604990470119">"Stäng"</string>
     <string name="spaceIsLow_content" product="default" msgid="4522771065344332702">"Den delade lagringsenheten börjar bli full. Ändra inställningen för kvalitet eller ta bort några bilder eller andra filer."</string>
     <string name="video_reach_size_limit" msgid="9196836111505731836">"Storleksgränsen är nådd."</string>
     <string name="pano_too_fast_prompt" msgid="2503148095578052177">"För snabbt"</string>
@@ -275,7 +276,7 @@
     <string name="set_duration" msgid="1638453882581604341">"Ange längden i sekunder"</string>
     <string name="count_down_title_text" msgid="7586031110595513050">"Nedräkning innan fotot tas"</string>
     <string name="remember_location_title" msgid="3045040613094030429">"Vill du spara platser för foton?"</string>
-    <string name="remember_location_prompt" msgid="5104210757873140169">"Tagga dina foton och videor med de platser där de tas eller spelas in.\n\nAndra appar kan få åtkomst till den här informationen tillsammans med dina sparade bilder."</string>
+    <string name="remember_location_prompt" msgid="3006013504489919474">"Tagga dina foton och videor med de platser där de är tagna eller inspelade."</string>
     <string name="remember_location_no" msgid="4412802756840226925">"Nej tack"</string>
     <string name="remember_location_yes" msgid="4339424460683531388">"Ja"</string>
     <string name="camera_menu_more_label" msgid="7951917844735828365">"FLER ALTERNATIV"</string>
@@ -369,7 +370,7 @@
     <string name="settings_cling_text" msgid="5368054627268181292">"Under Inställningar ändrar du upplösning och kvalitet, eller testar avancerade funktioner."</string>
     <string name="photo_size_selection_title" msgid="2789753590719172645">"Välj fotostorlek"</string>
     <string name="photo_aspect_ratio_selection_content" msgid="6668224437962196229">"Det här kan ändras senare under Inställningar."</string>
-    <string name="share_to" msgid="5144911209144798122">"Dela på"</string>
+    <string name="share_to" msgid="5144911209144798122">"Dela via"</string>
     <string name="edit_with" msgid="615569327230783971">"Redigera med"</string>
     <string name="startup_dialog_button_next" msgid="1011831256978228993">"NÄSTA"</string>
     <string name="confirm_button_text" msgid="7389949384482206814">"OK, JAG FÖRSTÅR"</string>
